[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/InfoPanel.gd" type="Script" id=1]
[ext_resource path="res://assets/user_interface/healthbody.png" type="Texture" id=2]
[ext_resource path="res://scripts/ArmorSlot.gd" type="Script" id=3]
[ext_resource path="res://scripts/UI.gd" type="Script" id=4]
[ext_resource path="res://scripts/EquippedWeapon.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0745098, 0.0745098, 0.0745098, 0.309804 )
corner_detail = 4
anti_aliasing = false

[node name="UI" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="PlayerInfo" type="ColorRect" parent="."]
margin_left = 11.0
margin_top = 10.1141
margin_right = 421.0
margin_bottom = 275.114
color = Color( 0, 0, 0, 0.129412 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthRect" type="ColorRect" parent="PlayerInfo"]
margin_left = 11.0
margin_right = 97.0
margin_bottom = 158.0
size_flags_vertical = 9
color = Color( 0.733333, 0.121569, 0.121569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="healthbody" type="Sprite" parent="PlayerInfo"]
position = Vector2( 53.531, 79 )
scale = Vector2( 0.177423, 0.177002 )
texture = ExtResource( 2 )

[node name="Armor" type="Control" parent="PlayerInfo"]
margin_left = 97.0
margin_right = 317.0
margin_bottom = 157.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArmorSlot" type="Control" parent="PlayerInfo/Armor"]
margin_top = 3.0
margin_right = 110.0
margin_bottom = 18.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="PlayerInfo/Armor/ArmorSlot"]
margin_left = 30.0
margin_right = 110.0
margin_bottom = 15.0
rect_min_size = Vector2( 80, 15 )
mouse_filter = 2

[node name="Label" type="Label" parent="PlayerInfo/Armor/ArmorSlot"]
margin_left = 1.0
margin_right = 38.0
margin_bottom = 15.0
rect_min_size = Vector2( 30, 15 )
rect_clip_content = true
size_flags_horizontal = 4
text = "Head:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArmorSlot2" type="Control" parent="PlayerInfo/Armor"]
margin_top = 20.0
margin_right = 110.0
margin_bottom = 35.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="PlayerInfo/Armor/ArmorSlot2"]
margin_left = 30.0
margin_right = 110.0
margin_bottom = 15.0
rect_min_size = Vector2( 80, 15 )
mouse_filter = 2

[node name="Label" type="Label" parent="PlayerInfo/Armor/ArmorSlot2"]
margin_right = 33.0
margin_bottom = 15.0
rect_min_size = Vector2( 30, 15 )
rect_clip_content = true
size_flags_horizontal = 4
text = "Face:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArmorSlot3" type="Control" parent="PlayerInfo/Armor"]
margin_top = 38.0
margin_right = 110.0
margin_bottom = 53.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="PlayerInfo/Armor/ArmorSlot3"]
margin_left = 30.0
margin_right = 110.0
margin_bottom = 15.0
rect_min_size = Vector2( 80, 15 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PlayerInfo/Armor/ArmorSlot3"]
margin_right = 39.0
margin_bottom = 16.0
rect_min_size = Vector2( 30, 15 )
rect_clip_content = true
size_flags_horizontal = 4
text = "Torso:"
align = 1
valign = 1

[node name="ArmorSlot4" type="Control" parent="PlayerInfo/Armor"]
margin_top = 57.0
margin_right = 110.0
margin_bottom = 72.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="PlayerInfo/Armor/ArmorSlot4"]
margin_left = 30.0
margin_right = 110.0
margin_bottom = 15.0
rect_min_size = Vector2( 80, 15 )
mouse_filter = 2

[node name="Label" type="Label" parent="PlayerInfo/Armor/ArmorSlot4"]
margin_right = 41.0
margin_bottom = 15.0
rect_min_size = Vector2( 30, 15 )
rect_clip_content = true
size_flags_horizontal = 4
text = "Jacket:"
align = 1
valign = 1

[node name="ArmorSlot5" type="Control" parent="PlayerInfo/Armor"]
margin_top = 76.0
margin_right = 110.0
margin_bottom = 91.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="PlayerInfo/Armor/ArmorSlot5"]
margin_left = 30.0
margin_right = 110.0
margin_bottom = 15.0
rect_min_size = Vector2( 80, 15 )
mouse_filter = 2

[node name="Label" type="Label" parent="PlayerInfo/Armor/ArmorSlot5"]
margin_right = 34.0
margin_bottom = 15.0
rect_min_size = Vector2( 30, 15 )
rect_clip_content = true
size_flags_horizontal = 4
text = "Back:"
align = 1
valign = 1

[node name="ArmorSlot6" type="Control" parent="PlayerInfo/Armor"]
margin_top = 93.0
margin_right = 110.0
margin_bottom = 108.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="PlayerInfo/Armor/ArmorSlot6"]
margin_left = 30.0
margin_right = 110.0
margin_bottom = 15.0
rect_min_size = Vector2( 80, 15 )
mouse_filter = 2

[node name="Label" type="Label" parent="PlayerInfo/Armor/ArmorSlot6"]
margin_right = 44.0
margin_bottom = 15.0
rect_min_size = Vector2( 30, 15 )
rect_clip_content = true
size_flags_horizontal = 4
text = "Hands:"
align = 1
valign = 1

[node name="ArmorSlot7" type="Control" parent="PlayerInfo/Armor"]
margin_top = 110.0
margin_right = 110.0
margin_bottom = 125.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="PlayerInfo/Armor/ArmorSlot7"]
margin_left = 30.0
margin_right = 110.0
margin_bottom = 15.0
rect_min_size = Vector2( 80, 15 )
mouse_filter = 2

[node name="Label" type="Label" parent="PlayerInfo/Armor/ArmorSlot7"]
margin_right = 33.0
margin_bottom = 15.0
rect_min_size = Vector2( 30, 15 )
rect_clip_content = true
size_flags_horizontal = 4
text = "Legs:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArmorSlot8" type="Control" parent="PlayerInfo/Armor"]
margin_top = 126.0
margin_right = 110.0
margin_bottom = 141.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="PlayerInfo/Armor/ArmorSlot8"]
margin_left = 30.0
margin_right = 110.0
margin_bottom = 15.0
rect_min_size = Vector2( 80, 15 )
mouse_filter = 2

[node name="Label" type="Label" parent="PlayerInfo/Armor/ArmorSlot8"]
margin_left = -0.000358582
margin_right = 49.9996
margin_bottom = 15.0
rect_min_size = Vector2( 30, 15 )
rect_clip_content = true
size_flags_horizontal = 4
text = "LgArmr:"
align = 1
valign = 1

[node name="ArmorSlot9" type="Control" parent="PlayerInfo/Armor"]
margin_top = 143.0
margin_right = 110.0
margin_bottom = 158.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="PlayerInfo/Armor/ArmorSlot9"]
margin_left = 30.0
margin_right = 110.0
margin_bottom = 15.0
rect_min_size = Vector2( 80, 15 )
mouse_filter = 2

[node name="Label" type="Label" parent="PlayerInfo/Armor/ArmorSlot9"]
margin_right = 33.0
margin_bottom = 15.0
rect_min_size = Vector2( 30, 15 )
rect_clip_content = true
size_flags_horizontal = 4
text = "Feet:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeadEquip" type="RichTextLabel" parent="PlayerInfo"]
visible = false
margin_left = 103.0
margin_top = 6.0
margin_right = 216.0
margin_bottom = 19.0
text = "HEAD"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TorsoEquip" type="RichTextLabel" parent="PlayerInfo"]
visible = false
margin_left = 103.0
margin_top = 42.5
margin_right = 216.0
margin_bottom = 55.5
text = "TORSO"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HandsEquip" type="RichTextLabel" parent="PlayerInfo"]
visible = false
margin_left = 103.0
margin_top = 76.5
margin_right = 216.0
margin_bottom = 89.5
text = "HANDS"
scroll_active = false

[node name="LegsEquip" type="RichTextLabel" parent="PlayerInfo"]
visible = false
margin_left = 103.0
margin_top = 110.5
margin_right = 216.0
margin_bottom = 123.5
text = "LEGS"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FeetEquip" type="RichTextLabel" parent="PlayerInfo"]
visible = false
margin_left = 102.0
margin_top = 144.0
margin_right = 215.0
margin_bottom = 157.0
text = "FEET"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EquippedWeapon" type="Control" parent="PlayerInfo"]
visible = false
margin_left = 10.0
margin_top = 175.0
margin_right = 400.0
margin_bottom = 215.0
rect_clip_content = true
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EquippedWeaponImage" type="TextureRect" parent="PlayerInfo/EquippedWeapon"]
margin_left = 19.0
margin_right = 149.0
margin_bottom = 40.0
rect_min_size = Vector2( 130, 40 )
rect_clip_content = true
mouse_filter = 2
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HandUseLabel" type="Label" parent="PlayerInfo/EquippedWeapon"]
margin_top = 12.638
margin_right = 15.0
margin_bottom = 26.638
text = "LR"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EquippedWeaponName" type="RichTextLabel" parent="PlayerInfo/EquippedWeapon"]
margin_left = 151.0
margin_top = 11.0
margin_right = 344.0
margin_bottom = 31.0
mouse_filter = 2
bbcode_enabled = true
bbcode_text = "[b]AK-47[/b]"
text = "AK-47"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "
"
}

[node name="CurrentAmmo" type="Label" parent="PlayerInfo/EquippedWeapon"]
margin_left = 330.0
margin_top = 11.0
margin_right = 390.0
margin_bottom = 25.0
text = "30/30"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EquippedWeapon2" type="Control" parent="PlayerInfo"]
visible = false
margin_left = 10.4142
margin_top = 215.0
margin_right = 400.414
margin_bottom = 255.0
rect_clip_content = true
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EquippedWeaponImage" type="TextureRect" parent="PlayerInfo/EquippedWeapon2"]
margin_left = 19.0
margin_right = 149.0
margin_bottom = 40.0
rect_min_size = Vector2( 130, 40 )
rect_clip_content = true
mouse_filter = 2
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HandUseLabel" type="Label" parent="PlayerInfo/EquippedWeapon2"]
margin_top = 11.638
margin_right = 15.0
margin_bottom = 25.638
text = "LR"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EquippedWeaponName" type="RichTextLabel" parent="PlayerInfo/EquippedWeapon2"]
margin_left = 151.0
margin_top = 11.0
margin_right = 344.0
margin_bottom = 31.0
mouse_filter = 2
bbcode_enabled = true
bbcode_text = "[b]AK-47[/b]"
text = "AK-47"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "
"
}

[node name="CurrentAmmo" type="Label" parent="PlayerInfo/EquippedWeapon2"]
margin_left = 330.0
margin_top = 11.0
margin_right = 390.0
margin_bottom = 25.0
text = "30/30"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoPanel" type="ColorRect" parent="."]
margin_left = 10.0
margin_top = 285.0
margin_right = 420.0
margin_bottom = 590.0
color = Color( 0.0745098, 0.0745098, 0.0745098, 0.309804 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="InfoPanel"]
margin_left = 20.0
margin_top = 10.0
margin_right = 148.0
margin_bottom = 138.0
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="InfoPanel"]
margin_left = 11.4142
margin_top = 148.0
margin_right = 401.414
margin_bottom = 295.0
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="InfoPanel"]
margin_left = 150.0
margin_top = 10.0
margin_right = 402.0
margin_bottom = 128.0

[node name="InventoryScroller" type="ScrollContainer" parent="."]
margin_left = 10.0
margin_top = 600.0
margin_right = 210.0
margin_bottom = 930.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="InventoryScroller"]

[node name="GroundScroller" type="ScrollContainer" parent="."]
margin_left = 220.0
margin_top = 600.0
margin_right = 420.0
margin_bottom = 930.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GroundScroller"]

[node name="TextLog" type="RichTextLabel" parent="."]
margin_left = 10.0
margin_top = 940.0
margin_right = 420.0
margin_bottom = 1070.0
custom_styles/normal = SubResource( 1 )
scroll_active = false
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="PlayerInfo/Armor/ArmorSlot" to="." method="_on_ArmorSlot_mouse_entered"]
[connection signal="mouse_entered" from="PlayerInfo/Armor/ArmorSlot2" to="." method="_on_ArmorSlot_mouse_entered"]
[connection signal="mouse_entered" from="PlayerInfo/Armor/ArmorSlot3" to="." method="_on_ArmorSlot_mouse_entered"]
[connection signal="mouse_entered" from="PlayerInfo/Armor/ArmorSlot4" to="." method="_on_ArmorSlot_mouse_entered"]
[connection signal="mouse_entered" from="PlayerInfo/Armor/ArmorSlot5" to="." method="_on_ArmorSlot_mouse_entered"]
[connection signal="mouse_entered" from="PlayerInfo/Armor/ArmorSlot6" to="." method="_on_ArmorSlot_mouse_entered"]
[connection signal="mouse_entered" from="PlayerInfo/Armor/ArmorSlot7" to="." method="_on_ArmorSlot_mouse_entered"]
[connection signal="mouse_entered" from="PlayerInfo/Armor/ArmorSlot8" to="." method="_on_ArmorSlot_mouse_entered"]
[connection signal="mouse_entered" from="PlayerInfo/Armor/ArmorSlot9" to="." method="_on_ArmorSlot_mouse_entered"]
[connection signal="mouse_entered" from="PlayerInfo/EquippedWeapon" to="." method="_on_EquippedWeapon_mouse_entered"]
[connection signal="mouse_entered" from="PlayerInfo/EquippedWeapon2" to="." method="_on_EquippedWeapon2_mouse_entered"]
